--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -128,7 +128,7 @@ jobs:
             # Поддержка основных библиотек (по dev‑пакетам, которые мы устанавливаем)
             --with-pulse \
             --with-alsa \
-            --with-freetype \
+            --without-freetype \
             --with-fontconfig \
             --with-sdl2 \
             --with-gnutls \
