--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -129,7 +129,7 @@ jobs:
             --with-pulse \
             --with-alsa \
             --without-freetype \
-            --with-fontconfig \
+            --without-fontconfig \
             --with-sdl2 \
             --with-gnutls \
             --with-db \
